--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -1,7 +1,6 @@
 .news--heading{
     width: 100%;
     text-align: center;
-    margin-top: 2rem;
 }
 
 .news--container{
@@ -12,7 +11,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
-    margin: 1rem 0;
+    margin: 1rem 0 5rem 0;
     cursor: default;
     padding: 2rem;
 }
@@ -23,7 +22,6 @@
     flex-basis: 30%;
     min-width: 280px;
     padding: 3rem 2rem;
-    /* box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
     box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 10px;
     display: flex;
     flex-direction: column;
