--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content:space-evenly;
-    align-items: center;
+    align-items: stretch;
     flex-wrap: wrap;
     gap: 2rem;
     margin: 1rem 0 5rem 0;
