--- a/src/components/Pricing/Pricing.css
+++ b/src/components/Pricing/Pricing.css
@@ -6,7 +6,7 @@
 
 .pricing--container{
     width: 100%;
-    margin: 2rem 0;
+    margin: 2rem 0 4rem 0;
 
     display: flex;
     flex-direction: row;
