--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -49,6 +49,12 @@
 
 }
 
+.news:hover .news--date{
+    background-color: var(--primary-color);
+    color: white;
+    border-color: var(--primary-color);
+}
+
 .news h1{
     font-size: 1.5rem;
     color: rgb(22, 22, 22);
@@ -58,4 +64,32 @@
     font-size: 1rem;
     color: #3f3f3f;
     margin-bottom: 2rem;
+}
+
+.pagination--container{
+    width: 100%;
+    height: 3rem;
+    margin-bottom: 1rem;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.pagination--container button{
+    width: 3rem;
+    height: 3rem;
+    padding: 0.2rem;
+    border-radius: 50%;
+    border: none;
+    background: var(--primary-color);
+    color: white;
+    cursor: pointer;
+}
+
+.pagination--container button[disabled]{
+    background: rgba(77, 77, 77, 0.555);
 }
