--- a/Frontend/src/components/Calendar/ExerciseTracker.css
+++ b/Frontend/src/components/Calendar/ExerciseTracker.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     gap: 2rem;
 
     padding: 0.6rem;
